# pool-elo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  tailwind.config.js
.dev/: .env  docker-compose.yml
.github/workflows/: github-actions-demo.yml
entity/src/: game.rs  mod.rs  one_vs_one.rs  prelude.rs  sea_orm_active_enums.rs  user.rs
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20240813_000001_create_users.rs  m20240813_000002_create_game.rs
src/: auth.rs  endpoints.rs  global_state.rs  main.rs  state_enums.rs
src/capsules/: forgot_password_form.rs  login_form.rs  mod.rs  register_form.rs
src/components/: error_block.rs  header.rs  layout.rs  mod.rs
src/components/static_components/: close_button.rs  close_button_path.rs  indicator.rs  menu_button.rs  mod.rs
src/components/sub_components/: error_block.rs  mod.rs
src/data/: mod.rs  pool_match.rs  store.rs  user.rs
src/entity/: game.rs  game_to_team_result.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  team_result.rs  team_result_to_user.rs  user.rs
src/handler/: mod.rs
src/models/: auth.rs  game_result.rs  generic.rs  mod.rs
src/server/: mod.rs  routes.rs  server_state.rs
src/server/auth/: forgot_password.rs  login.rs  mod.rs  register.rs
src/server/pool/: add_match.rs  mod.rs
src/templates/: add_game_form.rs  global_state.rs  index.rs  long.rs  mod.rs  one_v_one_board.rs  overall_board.rs
src/templates/pickleball/: index.rs
src/templates/pool/: add_game_form.rs  mod.rs  one_v_one_board.rs  overall_board.rs
src/templates/table_tennis/: index.rs
style/: tailwind.css
