[package]
resolver = "2"
name = "pool-elo"
version = "0.1.0"
edition = "2021"

[dependencies]
perseus = { version = "0.4.2", features = [ "hydrate" ] }
sycamore = "0.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4.20"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.19"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
perseus-axum = { version = "0.4.2", features = [ "dflt-server" ] }

[target.'cfg(client)'.dependencies]
