[package]
resolver = "2"
name = "pool-elo"
version = "0.1.0"
edition = "2021"

[dependencies]
perseus = { version = "0.4.2", features = ["hydrate"] }
sycamore = { version = "0.8.2", features = [
    "suspense",
    "web",
    "wasm-bindgen-interning",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10.0"
log = "0.4.20"
once_cell = "1.18.0"
web-sys = "0.3.64"
cfg-if = "1.0.0"
chrono = { version = "0.4.38", features = ["serde", "wasm-bindgen"] }
axum-login = "0.15.3"
password-auth = "1.0.0"
lazy_static = "1.5"

[target.'cfg(engine)'.dev-dependencies]
fantoccini = "0.19"

[target.'cfg(engine)'.dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
perseus-axum = { version = "0.4.2" }
axum = "0.6"
tower-http = { version = "0.3", features = ["fs"] }
futures = "0.3.28"
sea-orm = { version = "1.0", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-chrono",
] }

[target.'cfg(client)'.dependencies]
wasm-bindgen = "0.2.93"
reqwest = { version = "0.11", features = ["json"] }
sea-orm = { version = "1.0" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(engine)', 'cfg(client)'] }
